# obj-ReID

./: .gitignore  QA_NOTES.md  README.md  colab_requirements.txt  evaluate.py  main.py  predict.py  pyproject.toml  requirements.txt  train_stage1.py  train_stage2.py
datasets/: __init__.py  loader.py
datasets/dataset_a/: test.parquet  train.parquet  val.parquet
losses/: __init__.py
models/: clip_reid_model.py  model.py  resnet_baseline.py
predictions/: dataset_a.csv
results/: 730751385_20260417_011403.json  730751385_20260417_011403_summary.csv  cole_vazzana_20260413_210538.json  cole_vazzana_20260413_210611.json  cole_vazzana_20260413_210611_summary.csv  cole_vazzana_20260413_215225.json  cole_vazzana_20260413_215225_summary.csv  cole_vazzana_20260413_224106.json  cole_vazzana_20260413_224106_summary.csv  cole_vazzana_20260413_224108.json  cole_vazzana_20260413_224108_summary.csv  efficiency_clip_reid_finetuned_cuda.json  efficiency_clip_reid_zeroshot_mps.json  efficiency_resnet50_zero_shot_mps.json
scripts/: check_images_exist.py  make_splits.py  measure_efficiency.py
testing/: dummytest.py
tests/: conftest.py  test_evaluate.py  test_losses.py  test_model.py  test_splits.py
